--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@ body {
 	font-family: "Source Sans Pro", sans-serif;
 	background-color: #f2f2f2;
 	text-align: center;
+	
+	position: relative;
+	animation-name: loadscroll;
+	animation-duration: 1s
 }
+
 a:hover {
 	text-decoration: none;
 }
@@ -18,27 +23,48 @@ a:hover {
 	transition: opacity 0.2s ease-out;
 	background-color: #ffead0;
 	border-bottom: 1px solid orange;
+	
+	animation-name: loadfade;
+	animation-duration: 2s
 }
-#welcome-section {
+#welcome {
 	background-color: #fd7e14;
-	padding: 40vh 5% 0 5%;
+	padding: 5%;
 	width: 100%;
 	height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 #footer {
 	background-color: #ff2400;
 	margin: 1% 0;
 	padding: 1%;
 }
-#main {
-	background-color: #fff;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	margin: 0 50px;
-}
 #footer a {
 	text-shadow: 1px 1px 1px #2d1408;
 }
+
+.frame-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 50%;
+}
+
+.frame-container iframe, .frame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+.frame-container img, .frame .frame-img {
+  width: auto;
+  max-width: 100%;
+}
+
 .social-icons svg {
 	height: 1em;
 	margin: 0.5%;
@@ -53,7 +79,7 @@ a:hover {
 	padding-bottom: 10px;
 	margin-top: 1em;
 }
-.orange-bar a {
+.orange-bar a :not(button) {
 	text-shadow: 1.5px 1.5px 1.5px #2d1408;
 }
 .project-tile {
@@ -61,9 +87,6 @@ a:hover {
 	flex-direction: column;
 	margin: 2%;
 	width: 40%;
-}
-.project-tile iframe {
-	height: 20vh;
 }
 #navbar:hover {
 	opacity: 1 !important;
@@ -73,4 +96,14 @@ a:hover {
 .project-tile {
 	width: 80%
 }
+}
+
+@keyframes loadscroll { 
+  from{ bottom:-100px; opacity:0 } 
+  to  { bottom:0; opacity:1 }
+}
+@keyframes loadfade {
+  0%  { opacity:0 }
+  50% { opacity:0 }
+  100%{ opacity:0.5 }
 }
